# cppclouddrive

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  curl_transport_examples.cpp  dropbox_examples.cpp  gdrive_examples.cpp  http_transport_examples.cpp
examples/dropbox/: dropbox_auth_example.h  dropbox_create_folder_example.cpp
include/ccd/: auth.h  auth_utils.h  defs.h  executor.h  utils.h  var.h
include/ccd/details/: http_executor.h
include/ccd/dropbox/: dropbox.h
include/ccd/dropbox/model/: dropbox_metadata.h
include/ccd/dropbox/resource/: dropbox_copy.h  dropbox_create_folder.h  dropbox_delete.h  dropbox_download.h  dropbox_files.h  dropbox_get_metadata.h  dropbox_list_folder.h  dropbox_move.h  dropbox_upload.h
include/ccd/gdrive/: gdrive.h
include/ccd/gdrive/details/: gdrive_parameters.h
include/ccd/gdrive/model/: gdrive_file.h  gdrive_permission.h  gdrive_user.h
include/ccd/gdrive/resource/: gdrive_copy.h  gdrive_create.h  gdrive_del.h  gdrive_files.h  gdrive_get.h  gdrive_list.h  gdrive_update.h
include/ccd/http/: authorized_oauth2_transport.h  beast_transport.h  cpprest_transport.h  curl_transport.h  http_transport.h
src/: auth.cpp  auth_utils.cpp  executor.cpp  utils.cpp
src/details/: http_executor.cpp
src/dropbox/: dropbox.cpp
src/dropbox/model/: dropbox_metadata.cpp
src/dropbox/resource/: dropbox_copy.cpp  dropbox_create_folder.cpp  dropbox_delete.cpp  dropbox_download.cpp  dropbox_files.cpp  dropbox_get_metadata.cpp  dropbox_list_folder.cpp  dropbox_move.cpp  dropbox_upload.cpp
src/gdrive/: gdrive.cpp
src/gdrive/model/: gdrive_file.cpp  gdrive_permission.cpp  gdrive_user.cpp
src/gdrive/resource/: gdrive_copy.cpp  gdrive_create.cpp  gdrive_del.cpp  gdrive_files.cpp  gdrive_get.cpp  gdrive_list.cpp  gdrive_update.cpp
src/http/: authorized_oauth2_transport.cpp  beast_transport.cpp  cpprest_transport.cpp  curl_transport.cpp  http_transport.cpp
tests/: CMakeLists.txt  utils_test.cpp
tests/gdrive/model/: gdrive_user_test.cpp
tests/gdrive/resource/: gdrive_copy_test.cpp
tests/http/: beast_transport_test.cpp
